[gd_scene load_steps=8 format=3 uid="uid://bvgav5q2y8jbw"]

[ext_resource type="Script" uid="uid://siok2lba6dv7" path="res://Personaje/grupos.gd" id="1_5rgut"]
[ext_resource type="Texture2D" uid="uid://k24o6ohnqgm5" path="res://Assets/kenney_alien-ufo-pack/PNG/shipBlue_manned.png" id="1_a6ak4"]
[ext_resource type="Texture2D" uid="uid://brqss5mk5oslq" path="res://Assets/kenney_alien-ufo-pack/PNG/shipPink_manned.png" id="2_5rgut"]
[ext_resource type="Texture2D" uid="uid://c35itr5a0gufj" path="res://Assets/kenney_alien-ufo-pack/PNG/shipYellow_manned.png" id="3_tihmo"]
[ext_resource type="Texture2D" uid="uid://b1d8b5h85l1c7" path="res://Assets/kenney_alien-ufo-pack/PNG/shipBeige_manned.png" id="4_aj8np"]
[ext_resource type="Texture2D" uid="uid://7hkjsn621yp2" path="res://Assets/kenney_alien-ufo-pack/PNG/shipGreen_manned.png" id="5_67w7v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_haejx"]
radius = 24.0
height = 128.0

[node name="Grupos" type="Node2D"]
script = ExtResource("1_5rgut")

[node name="ufo1" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="ufo1"]
texture_filter = 1
texture = ExtResource("1_a6ak4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ufo1"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_haejx")

[node name="Marker2D" type="Marker2D" parent="ufo1"]
position = Vector2(0, 48)

[node name="ufo2" type="CharacterBody2D" parent="."]
position = Vector2(-256, 0)
collision_layer = 4
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="ufo2"]
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("2_5rgut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ufo2"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_haejx")

[node name="Marker2D" type="Marker2D" parent="ufo2"]
position = Vector2(0, 48)

[node name="ufo3" type="CharacterBody2D" parent="."]
position = Vector2(256, 0)
collision_layer = 4
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="ufo3"]
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("3_tihmo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ufo3"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_haejx")

[node name="Marker2D" type="Marker2D" parent="ufo3"]
position = Vector2(0, 48)

[node name="ufo4" type="CharacterBody2D" parent="."]
position = Vector2(-512, 0)
collision_layer = 4
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="ufo4"]
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("4_aj8np")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ufo4"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_haejx")

[node name="Marker2D" type="Marker2D" parent="ufo4"]
position = Vector2(0, 48)

[node name="ufo5" type="CharacterBody2D" parent="."]
position = Vector2(512, 0)
collision_layer = 4
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="ufo5"]
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("5_67w7v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ufo5"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_haejx")

[node name="Marker2D" type="Marker2D" parent="ufo5"]
position = Vector2(0, 48)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
